name:            agda-lib-ffi
version:         0.10
cabal-version:   >= 1.8
build-type:      Simple
description:     Auxiliary Haskell code used by Agda's standard library.
tested-with:     GHC == 7.8.4

library
  build-depends:    base >= 4.5.0.0 && < 4.9
  exposed-modules:  Data.FFI
                    IO.FFI
