name:            agda-lib-ffi
version:         0.11
cabal-version:   >= 1.8
build-type:      Simple
description:     Auxiliary Haskell code used by Agda's standard library.
tested-with:     GHC == 7.8.4

library
  build-depends:    base >= 4.6.0.1 && < 4.9
                  , text >= 1.2 && < 1.3
  exposed-modules:  Data.FFI
                    IO.FFI
