name: agda-bisect
synopsis: Git bisect wrapper script for the Agda code base
version: 0.1
cabal-version: >= 1.10
author: Nils Anders Danielsson
build-type: Simple
tested-with: GHC == 8.0.2
             GHC == 8.2.2
             GHC == 8.4.4
             GHC == 8.6.5

executable agda-bisect
  main-is:          Bisect.hs
  build-depends:      ansi-wl-pprint >= 0.6.7.3 && < 0.7
                    , base >= 4.9.0.0 && < 4.13
                    , directory >= 1.2.6.2 && < 1.4
                    , filepath == 1.4.*
                    , optparse-applicative >= 0.13 && < 0.15
                    , process >= 1.4.2.0 && < 1.7
                    , time >= 1.6.0.1 && < 1.9
                    , unix >= 2.7.2.0 && < 2.8
  default-language: Haskell2010
  ghc-options:      -threaded
