name: agda-licences
synopsis: Tries to print the licence of Agda as well as some of its dependencies.
version: 0.1
cabal-version: >= 1.10
author: Nils Anders Danielsson
build-type: Simple

executable agda-licences
  main-is:          Main.hs
  build-depends:      base == 4.10.*
                    , Cabal == 2.0.*
                    , directory == 1.3.*
                    , filepath == 1.4.*
                    , process == 1.6.*
                    , temporary == 1.2.*
  default-language: Haskell2010
