name:                agda-pkg
version:             2.2.7
description:         Agda package management tool
license:             GPL
license-file:        LICENSE
author:              Darin Morrison
maintainer:          darinmorrison@gmail.com
build-type:          Simple
cabal-version:       >= 1.8.0.2

executable agda-pkg
  extensions:       FlexibleContexts
                  , FlexibleInstances
                  , GeneralizedNewtypeDeriving
                  , MultiParamTypeClasses
                  , OverloadedStrings
  if true
    ghc-options:    -w -Werror
                    -fwarn-deprecated-flags
                    -fwarn-dodgy-foreign-imports
                    -fwarn-dodgy-imports
                    -fwarn-duplicate-exports
                    -fwarn-hi-shadowing
                    -fwarn-incomplete-patterns
                    -fwarn-missing-fields
                    -fwarn-missing-methods
                    -fwarn-overlapping-patterns
                    -fwarn-warnings-deprecations
  if impl(ghc >= 6.12)
    ghc-options:    -fwarn-dodgy-exports
                    -fwarn-wrong-do-bind
  hs-source-dirs: src
  main-is:        Main.hs
  build-depends:    Agda        == 2.2.7
                  , Cabal       == 1.8.*
                  , array       == 0.3.*
                  , base        == 4.2.*
                  , bytestring  >= 0.9.0.1 && < 1
                  , mtl         == 1.1.*
                  , pretty      == 1.0.*
                  , regex-base  == 0.93.*
                  , regex-posix == 0.94.*
