name:                closed-issues-for-milestone
version:             0.1.0.0
synopsis:            Report the closed issues in GitHub for milestone.
-- description:
-- license:             LICENSE
-- license-file:        LICENSE
author:              Andreas Abel
maintainer:          <andreas.abel@gu.se>
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.10
tested-with:         GHC == 8.6.1

executable closed-issues-for-milestone
  main-is:          Main.hs
  default-language: Haskell2010

  build-depends:  base       >= 4.8.0.0  && < 4.13
                , bytestring >= 0.10.6.0 && < 0.11
                , github     >= 0.16     && < 0.21
                , text       >= 1.2.1.0  && < 1.3

  ghc-options: -Werror
