cabal-version: >= 1.10
version: 0.0.20231004
name:       find-cycles
synopsis:   Script to find cross-module declaration cycles
author:     Lawrence Chonavel
build-type: Simple

executable find-cycles
  main-is:          FindCycles.hs
  default-language: Haskell2010
  build-depends:
      algebraic-graphs    >= 0.6.1 && < 0.7
    , base                >= 4.16.4 && < 4.17
    , containers          >= 0.6.5 && < 0.7
    , hiedb               >= 0.4.3 && < 0.5
    , temporary           >= 1.3 && < 1.4
