name:            fix-agda-whitespace
version:         0.0.4
cabal-version:   >= 1.8
build-type:      Simple
description:     Fixes whitespace issues for Agda sources.
tested-with:     GHC == 7.10.3
                 GHC == 8.0.2
                 GHC == 8.2.2

executable fix-agda-whitespace
  hs-source-dirs:   .
  main-is:          FixWhitespace.hs

  build-depends:  base >= 4.8.2.0 && < 4.12
                , directory >= 1.2.2.0 && < 1.4
                , filemanip >= 0.3.6.2 && < 0.4
                , filepath >= 1.4.0.0 && < 1.5
                , text >= 0.11.3.1 && < 1.3
