name:            fix-whitespace
version:         0.0.5
cabal-version:   >= 1.8
build-type:      Simple
description:     Removes trailing whitespace, lines containing only whitespace and ensure that every file ends in a newline character.
maintainer:      Liang-Ting Chen <liang.ting.chen.tw@gmail.com>
homepage:        https://github.com/agda/fix-whitespace
bug-reports:     https://github.com/agda/fix-whitespace/issues
author:          fix-whitespace was originally rewritten by Nils Anders Danielsson with contributions from Ulf Norell, Andrés Sicard-Ramírez, Andreas Abel, Philipp Hausmann, Jesper Cockx, Vlad Semenov, and Liang-Ting Chen.
Category:        Text
Synopsis:        Fixes whitespace issues.
tested-with:     GHC == 8.0.2
                 GHC == 8.2.2
                 GHC == 8.4.4
                 GHC == 8.6.5

source-repository head
  type: git
  location: https://github.com/agda/fix-whitespace.git

executable fix-whitespace
  hs-source-dirs:   .
  main-is:          FixWhitespace.hs
  other-modules:    ParseConfig
  ghc-options:      -O2

  build-depends:  base >= 4.9.0.0 && < 4.14
                , directory >= 1.2.6.2 && < 1.4
                , filemanip >= 0.3.6.2 && < 0.4
                , filepath >= 1.4.1.0 && < 1.5
                , yaml >= 0.8.4 && < 0.12

  -- ASR (2018-10-16). Required for supporting GHC 8.4.1, 8.4.2 and
  -- 8.4.3. See Issue #3277.
  if impl(ghc >= 8.4.1) && impl(ghc <= 8.4.3)
    build-depends: text >= 1.2.3.0 && < 1.3
  else
    build-depends: text >= 1.2.3.1 && < 1.3
