name: hTags
version: 0.1.4
cabal-version: >= 1.8
author: Ulf Norell, Nils Anders Danielsson, Andreas Abel
build-type: Simple
tested-with: GHC == 7.8.4
             GHC == 7.10.3
             GHC == 8.0.2
             GHC == 8.2.1

executable hTags
  main-is: Main.hs
  other-modules: Tags

  build-depends:  base >= 4.7.0.2 && < 4.11
                -- Most APIs we use are unchanged since 1.10, except for
                -- Exception in Language.Haskell.Extension. Compare:
                -- http://hackage.haskell.org/package/Cabal-1.10.2.0/docs/Language-Haskell-Extension.html
                -- http://hackage.haskell.org/package/Cabal-1.12.0/docs/Language-Haskell-Extension.html
                --
                -- We must still support 1.18.1.5 since GHC 7.8.4 was
                -- built using that.
                , Cabal >= 1.18.1.5 && < 2.1
                , containers >= 0.5.5.1 && < 0.6
                , directory >= 1.2.1.0 && < 1.4
                , filepath >= 1.3.0.2 && < 1.5
                , ghc >= 7.8.4 && < 8.3
                , process >= 1.2.0.0 && < 1.7
                , strict >= 0.3.2 && < 0.4

    -- Since we are using GHC as a library and transformers 0.3.0.0
    -- was shipped as a *base* library of GHC 7.8.*, we must use a
    -- version of mtl compatible with that version of transformers
    -- when compiling with GHC 7.8.*.
  if impl(ghc == 7.8.*)
    build-depends: mtl == 2.1.3.1
  else
    build-depends: mtl >= 2.2.1 && < 2.3

  ghc-options: -fwarn-incomplete-patterns
