name:            Agda-executable
version:         2.3.0
cabal-version:   >= 1.8
build-type:      Simple
license:         OtherLicense
license-file:    LICENSE
author:          Ulf Norell, Nils Anders Danielsson, Catarina Coquand, Makoto Takeyama, Andreas Abel, ...
maintainer:      Ulf Norell <ulfn@chalmers.se>
homepage:        http://wiki.portal.chalmers.se/agda/
bug-reports:     http://code.google.com/p/agda/issues/list
category:        Dependent types
synopsis:        Command-line program for type-checking and compiling Agda programs
description:
  This package provides a command-line program for type-checking and
  compiling Agda programs. The program can also generate hyperlinked,
  highlighted HTML files from Agda sources.
tested-with:     GHC == 7.2.1

source-repository head
  type:     darcs
  location: http://code.haskell.org/Agda/

source-repository this
  type:     darcs
  location: http://code.haskell.org/Agda/
  tag:      2.3.0

executable agda
  main-is:       Main.hs
  build-depends: Agda == 2.3.0,
                 -- Nothing is used from the following package, except
                 -- for the prelude.
                 base >= 3 && < 6
  if impl(ghc >= 7)
    -- If someone installs Agda with the setuid bit set, then the
    -- presence of +RTS may be a security problem (see GHC bug #3910).
    -- However, we sometimes recommend people to use +RTS to control
    -- Agda's memory usage, so we want this functionality enabled by
    -- default.
    ghc-options: -rtsopts
