name:            Agda-ghci
version:         2.3.1
cabal-version:   >= 1.8
build-type:      Simple
license:         OtherLicense
license-file:    LICENSE
author:          Ulf Norell, Nils Anders Danielsson, Catarina Coquand, Makoto Takeyama, Andreas Abel, ...
maintainer:      Ulf Norell <ulfn@chalmers.se>
homepage:        http://wiki.portal.chalmers.se/agda/
bug-reports:     http://code.google.com/p/agda/issues/list
category:        Dependent types
synopsis:        Command-line program for type-checking and compiling Agda programs
description:
  This package provides a command-line program
  which mimics the ghci behaviour but support expressions
  only given by the Agda Emacs frontend.
tested-with:     GHC == 7.4.1

source-repository head
  type:     darcs
  location: http://code.haskell.org/Agda/

executable agdaghci
  main-is:       Main.hs
  build-depends: Agda == 2.3.1,
                 -- Nothing is used from the following package, except
                 -- for the prelude.
                 base >= 3 && < 6
  if impl(ghc >= 7)
    -- If someone installs Agda with the setuid bit set, then the
    -- presence of +RTS may be a security problem (see GHC bug #3910).
    -- However, we sometimes recommend people to use +RTS to control
    -- Agda's memory usage, so we want this functionality enabled by
    -- default.
    ghc-options: -rtsopts
