name:            size-solver
version:         0.2016.7.13
cabal-version:   >= 1.8
build-type:      Simple
-- license:         OtherLicense
-- license-file:    LICENSE
author:          Andreas Abel and Felix Reihl.
maintainer:      Andreas Abel <andreas.abel@gu.se>
-- homepage:        http://wiki.portal.chalmers.se/agda/
-- bug-reports:     http://code.google.com/p/agda/issues/list
category:        Sized types
synopsis:        A solver for size constraints arising in sized types.
description:
  See Felix Reihl, 2013, Bachelor thesis, Ludwig-Maximilians-University.
tested-with:
  GHC == 9.8.1
  GHC == 9.6.4
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5

source-repository head
  type:     git
  location: https://github.com/agda/agda.git

executable size-solver
  hs-source-dirs: .
  main-is:        Main.hs
  build-depends:
    Agda == 2.6.4.3
    , base       >= 4.12.0.0 && < 5
    , containers >= 0.5.7.1  && < 0.8
    , mtl        >= 2.2.1    && < 2.4
    , parsec     >= 3.1      && < 3.2
  other-modules:
    Parser
