name:                closed-issues-for-milestone
version:             0.1.0.0
synopsis:            Report the closed issues in GitHub for milestone.
-- description:
-- license:             LICENSE
-- license-file:        LICENSE
author:              Andreas Abel
maintainer:          <andreas.abel@gu.se>
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >= 1.10

tested-with:
  GHC == 8.8.4
  GHC == 8.10.7
  GHC == 9.0.2
  GHC == 9.2.4
  GHC == 9.4.2

executable closed-issues-for-milestone
  main-is:          Main.hs
  default-language: Haskell2010

  build-depends:  base       >= 4.13.0.0  && < 4.18
                , bytestring >= 0.10.9.0  && < 0.12
                , github     >= 0.28      && < 0.29
                , text       >= 1.2.3     && < 2.1
                , vector     >= 0.12.0.3  && < 0.14

  ghc-options:
    -Wall
    -Wcompat
    -Werror
    -threaded
