cabal-version:       >=1.10
name:                HelloWorld
version:             0.1.0.0
synopsis:            This is just Hello World! for the sake of testing dynamic executables.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:             PublicDomain

-- The package author(s).
author:              Andreas Abel

-- category:            Testing

build-type:          Custom

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:


library
  -- Modules exported by the library.
  exposed-modules: Hello.World

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base
  -- base >=4.11 && <4.12

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010


executable hello-world
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       HelloWorld, base
  -- base >=4.11 && <4.12

  -- Directories containing source files.
  hs-source-dirs:      .

  -- Base language which the package is written in.
  default-language:    Haskell2010
