name:            benchmarks
version:         0.0
cabal-version:   >= 1.8
build-type:      Simple
description:     Some benchmarks

executable mixfix-benchmarks
  hs-source-dirs:   .
  main-is:          Test.hs
  other-modules:    Parser
                    SlowParser
                    Standard
                    AmbExTrie2
                    ContTrans
                    ReadPWrapper
                    Incremental
                    AmbExTrie
                    ReadP
                    Memoised
                    MemoisedCPS
                    StackContTrans
                    AmbTrie
                    PrecedenceGraph
  build-depends:    base >= 4.2 && < 4.8,
                    array >= 0.5,
                    QuickCheck >= 2.4,
                    mtl >= 2.1.1 && < 2.3,
                    fgl == 5.4.*,
                    containers >= 0.4 && < 0.6,
                    hashable == 1.2.*,
                    unordered-containers == 0.2.*,
                    ghc-prim >= 0.2 && < 0.7,
                    incremental-parser == 0.2.*
